[tool.poetry]
name = "learn-fast-api"
version = "0.1.0"
description = "FastAPI Book"
authors = ["Diogo Rocha <diogo.rocha42@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"
httpie = "^3.2.3"
requests = "^2.31.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
